2002-01-29  Andrew Csillag  <drew@thoughttrack.com>

	* pylibs/static.py: after having dropped this fix that actually
	makes this stuff work on 2.2, finally reinstated the fix because
	__call__ was being improperly handled.

2002-01-28  Andrew Csillag  <drew@thoughttrack.com>

	* 3.2beta0 cut

2002-01-27  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/PyDO/PyDO.py (PyDOBase.get): self.get(columnname,
	default) now returns default if self._dict[columnname]==None. 

2002-01-26  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/AE/Cache.py (_fixPath): _normpath is now applied to the
	entire resulting path, which solves a problem with zipfs.

	* SkunkWeb/sample_webdocs/demo/gallery/comp/listing.pydcmp: now
	uses the vfs.

	* pylibs/vfs/vfs.py (LocalFS.__init__): now take an argument,
	"root", which specifies the root of the fs tree.

	* pylibs/PyDO/mysqlconn.py (_dateConvertFromDB): fixed dumb goof
	-- I had thought DateTime.DateTime was a class, not a function
	that returned an instance of a type, and passed it to isinstance;
	now do a correct type check.

2002-01-25  Andrew Csillag  <drew@localhost.localdomain>

	* Makefile.in, SkunkWeb/Makefile.in, pylibs/Makefile.in: made so
	BSD Make won't barf on them.

2002-01-23  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Makefile.in (DEMO_FILES): fixed typo.

2002-01-23  Andrew Csillag  <drew@localhost.localdomain>

	* pylibs/tarlib.py: added

	* pylibs/vfs/__init__.py: now loads tarfs

	* pylibs/vfs/tarfs.py: added support for tarfiles in vfs layer
	

2002-01-22  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/PyDO/doc: updated MySQL documentation.

	* pylibs/vfs/pathutil.py (Archive.listdir): fixed cut-and-paste
	error.

2002-01-21  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Makefile.in (DEMO_FILES, DEMO_DIRS): fix so that the
	image gallery gets installed.

	* SkunkWeb/sample_webdocs/demo/gallery/index.html: moved
	index.html to index.inc; index.html now just consists of an
	include tag.  
